// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`computeSchemaComponents Float without decimals 1`] = `
{
  "ObjectName": {
    "description": undefined,
    "example": {
      "number2": 908.6869075900024,
    },
    "properties": {
      "number2": {
        "type": "number",
      },
    },
    "required": [
      "number2",
    ],
    "type": "object",
  },
  "ObjectNameForResponse": {
    "description": undefined,
    "properties": {
      "number2": {
        "type": "number",
      },
    },
    "type": "object",
  },
  "ObjectNameForUpdate": {
    "description": undefined,
    "example": {
      "number2": 294.32053422530583,
    },
    "properties": {
      "number2": {
        "type": "number",
      },
    },
    "type": "object",
  },
}
`;

exports[`computeSchemaComponents Integer dataType with decimals 1`] = `
{
  "ObjectName": {
    "description": undefined,
    "example": {
      "number1": 104.12278057106438,
    },
    "properties": {
      "number1": {
        "type": "number",
      },
    },
    "required": [
      "number1",
    ],
    "type": "object",
  },
  "ObjectNameForResponse": {
    "description": undefined,
    "properties": {
      "number1": {
        "type": "number",
      },
    },
    "type": "object",
  },
  "ObjectNameForUpdate": {
    "description": undefined,
    "example": {
      "number1": 448.44563264972925,
    },
    "properties": {
      "number1": {
        "type": "number",
      },
    },
    "type": "object",
  },
}
`;

exports[`computeSchemaComponents Integer with a 0 decimals 1`] = `
{
  "ObjectName": {
    "description": undefined,
    "example": {
      "number3": 288.4875632477624,
    },
    "properties": {
      "number3": {
        "type": "integer",
      },
    },
    "required": [
      "number3",
    ],
    "type": "object",
  },
  "ObjectNameForResponse": {
    "description": undefined,
    "properties": {
      "number3": {
        "type": "integer",
      },
    },
    "type": "object",
  },
  "ObjectNameForUpdate": {
    "description": undefined,
    "example": {
      "number3": 130.8985435461594,
    },
    "properties": {
      "number3": {
        "type": "integer",
      },
    },
    "type": "object",
  },
}
`;
